--- a/src/main/resources/com/righit/synthesizer/synth-view.fxml
+++ b/src/main/resources/com/righit/synthesizer/synth-view.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -129,6 +130,10 @@
             <Label layoutX="788.0" layoutY="142.0" text="Master" />
             <Slider layoutX="737.0" layoutY="111.0" />
             <Label layoutX="787.0" layoutY="88.0" text="Attack" />
+            <ComboBox fx:id="audioInterfaceSelector" layoutX="678.0" layoutY="14.0" prefWidth="150.0" />
+            <ComboBox fx:id="midiInterfaceSelector" layoutX="678.0" layoutY="46.0" prefWidth="150.0" />
+            <Button layoutX="845.0" layoutY="14.0" mnemonicParsing="false" text="Ok" />
+            <Button layoutX="845.0" layoutY="46.0" mnemonicParsing="false" text="Ok" />
          </children>
       </AnchorPane>
    </bottom>
