--- a/src/main/resources/com/righit/synthesizer/synth-view.fxml
+++ b/src/main/resources/com/righit/synthesizer/synth-view.fxml
@@ -49,11 +49,11 @@
             <RadioButton fx:id="oscillatorSwitch1" layoutX="110.0" layoutY="22.0" mnemonicParsing="false" text="Oscillator 1" />
             <Slider fx:id="volumeControl1" layoutX="-19.0" layoutY="241.0" prefWidth="143.0" rotate="-90.0" />
             <Label layoutX="32.0" layoutY="329.0" text="Volume" />
-            <ComboBox fx:id="nVoiceSelector1" layoutX="44.0" layoutY="107.0" prefHeight="25.0" prefWidth="65.0" />
+            <ComboBox fx:id="nVoiceSelector1" layoutX="44.0" layoutY="120.0" prefHeight="25.0" prefWidth="65.0" />
             <Slider fx:id="panControl1" layoutX="81.0" layoutY="385.0" max="50.0" min="-50.0" />
             <Label layoutX="43.0" layoutY="384.0" text="Pan" />
-            <Slider layoutX="151.0" layoutY="113.0" prefHeight="14.0" prefWidth="53.0" />
-            <Slider layoutX="214.0" layoutY="113.0" prefHeight="14.0" prefWidth="53.0" rotate="-90.0" />
+            <Slider layoutX="151.0" layoutY="126.0" prefHeight="14.0" prefWidth="53.0" />
+            <Slider layoutX="207.0" layoutY="113.0" prefHeight="14.0" prefWidth="53.0" rotate="-90.0" />
             <LineChart fx:id="waveTableVisualizer1" alternativeRowFillVisible="false" axisSortingPolicy="NONE" createSymbols="false" horizontalGridLinesVisible="false" horizontalZeroLineVisible="false" layoutX="77.0" layoutY="183.0" legendSide="TOP" legendVisible="false" prefHeight="160.0" prefWidth="200.0" verticalGridLinesVisible="false" verticalZeroLineVisible="false">
               <xAxis>
                 <CategoryAxis side="BOTTOM" />
@@ -66,6 +66,9 @@
                   </NumberAxis>
               </yAxis>
             </LineChart>
+            <Label layoutX="53.0" layoutY="94.0" text="N.Voices" />
+            <Label layoutX="158.0" layoutY="94.0" text="Spread" />
+            <Label layoutX="247.0" layoutY="112.0" text="Blend" />
          </children>
       </AnchorPane>
    </left>
@@ -76,11 +79,11 @@
             <ComboBox fx:id="WaveTableSelector2" layoutX="76.0" layoutY="56.0" prefWidth="150.0" />
             <Slider fx:id="volumeControl2" layoutX="-28.0" layoutY="239.0" rotate="-90.0" />
             <Label layoutX="22.0" layoutY="329.0" text="Volume" />
-            <ComboBox fx:id="nVoiceSelector2" layoutX="44.0" layoutY="108.0" prefHeight="25.0" prefWidth="65.0" />
+            <ComboBox fx:id="nVoiceSelector2" layoutX="45.0" layoutY="122.0" prefHeight="25.0" prefWidth="65.0" />
             <Slider fx:id="panControl2" layoutX="81.0" layoutY="387.0" max="50.0" min="-50.0" />
             <Label layoutX="33.0" layoutY="385.0" prefWidth="20.0" text="Pan" />
-            <Slider layoutX="151.0" layoutY="115.0" prefHeight="14.0" prefWidth="53.0" />
-            <Slider layoutX="225.0" layoutY="114.0" prefHeight="14.0" prefWidth="53.0" rotate="-90.0" />
+            <Slider layoutX="151.0" layoutY="128.0" prefHeight="14.0" prefWidth="53.0" />
+            <Slider layoutX="207.0" layoutY="115.0" prefHeight="14.0" prefWidth="53.0" rotate="-90.0" />
             <LineChart fx:id="waveTableVisualizer2" alternativeRowFillVisible="false" axisSortingPolicy="NONE" createSymbols="false" horizontalGridLinesVisible="false" horizontalZeroLineVisible="false" layoutX="77.0" layoutY="183.0" legendSide="TOP" legendVisible="false" prefHeight="160.0" prefWidth="200.0" verticalGridLinesVisible="false" verticalZeroLineVisible="false">
                <xAxis>
                   <CategoryAxis side="BOTTOM" />
@@ -93,6 +96,9 @@
                   </NumberAxis>
                </yAxis>
             </LineChart>
+            <Label layoutX="53.0" layoutY="95.0" text="N.Voices" />
+            <Label layoutX="158.0" layoutY="95.0" text="Spread" />
+            <Label layoutX="249.0" layoutY="112.0" text="Blend" />
          </children>
       </AnchorPane>
    </center>
@@ -103,11 +109,11 @@
             <ComboBox fx:id="WaveTableSelector3" layoutX="75.0" layoutY="60.0" prefWidth="150.0" />
             <Slider fx:id="volumeControl3" layoutX="-27.0" layoutY="234.0" rotate="-90.0" />
             <Label layoutX="23.0" layoutY="331.0" text="Volume" />
-            <ComboBox fx:id="nVoiceSelector3" layoutX="46.0" layoutY="111.0" prefHeight="25.0" prefWidth="65.0" />
+            <ComboBox fx:id="nVoiceSelector3" layoutX="46.0" layoutY="124.0" prefHeight="25.0" prefWidth="65.0" />
             <Slider fx:id="panControl3" layoutX="78.0" layoutY="382.0" max="50.0" min="-50.0" />
             <Label layoutX="34.0" layoutY="381.0" text="Pan" />
-            <Slider layoutX="150.0" layoutY="117.0" prefHeight="14.0" prefWidth="53.0" />
-            <Slider layoutX="229.0" layoutY="117.0" prefHeight="14.0" prefWidth="53.0" rotate="-90.0" />
+            <Slider layoutX="150.0" layoutY="130.0" prefHeight="14.0" prefWidth="53.0" />
+            <Slider layoutX="206.0" layoutY="123.0" prefHeight="14.0" prefWidth="53.0" rotate="-90.0" />
             <LineChart fx:id="waveTableVisualizer3" alternativeRowFillVisible="false" axisSortingPolicy="NONE" createSymbols="false" horizontalGridLinesVisible="false" horizontalZeroLineVisible="false" layoutX="76.0" layoutY="175.0" legendSide="TOP" legendVisible="false" prefHeight="160.0" prefWidth="200.0" verticalGridLinesVisible="false" verticalZeroLineVisible="false">
                <xAxis>
                   <CategoryAxis side="BOTTOM" />
@@ -120,6 +126,9 @@
                   </NumberAxis>
                </yAxis>
             </LineChart>
+            <Label layoutX="55.0" layoutY="98.0" text="N.Voices" />
+            <Label layoutX="157.0" layoutY="98.0" text="Spread" />
+            <Label layoutX="249.0" layoutY="120.0" text="Blend" />
          </children>
       </AnchorPane>
    </right>
