--- a/src/main/resources/com/righit/synthesizer/synth-view.fxml
+++ b/src/main/resources/com/righit/synthesizer/synth-view.fxml
@@ -47,13 +47,13 @@
          <children>
             <ComboBox fx:id="WaveTableSelector1" layoutX="76.0" layoutY="53.0" prefWidth="150.0" />
             <RadioButton fx:id="oscillatorSwitch1" layoutX="110.0" layoutY="22.0" mnemonicParsing="false" text="Oscillator 1" />
-            <Slider fx:id="volumeControl1" layoutX="-19.0" layoutY="241.0" prefWidth="143.0" rotate="-90.0" />
+            <Slider fx:id="volumeControl1" layoutX="-19.0" layoutY="241.0" max="5.0" min="-60.0" prefWidth="143.0" rotate="-90.0" />
             <Label layoutX="32.0" layoutY="329.0" text="Volume" />
             <ComboBox fx:id="nVoiceSelector1" layoutX="44.0" layoutY="120.0" prefHeight="25.0" prefWidth="65.0" />
-            <Slider fx:id="panControl1" layoutX="81.0" layoutY="385.0" max="50.0" min="-50.0" />
+            <Slider fx:id="panControl1" layoutX="81.0" layoutY="385.0" max="45.0" min="-45.0" />
             <Label layoutX="43.0" layoutY="384.0" text="Pan" />
-            <Slider fx:id="spreadControl1" layoutX="151.0" layoutY="126.0" max="5.0" prefHeight="14.0" prefWidth="53.0" />
-            <Slider fx:id="blendControl1" layoutX="207.0" layoutY="113.0" max="10.0" min="-10.0" prefHeight="14.0" prefWidth="53.0" rotate="-90.0" />
+            <Slider fx:id="spreadControl1" layoutX="151.0" layoutY="126.0" max="0.4" prefHeight="14.0" prefWidth="53.0" />
+            <Slider fx:id="blendControl1" layoutX="207.0" layoutY="113.0" max="1.0" min="-1.0" prefHeight="14.0" prefWidth="53.0" rotate="-90.0" />
             <LineChart fx:id="waveTableVisualizer1" alternativeRowFillVisible="false" axisSortingPolicy="NONE" createSymbols="false" horizontalGridLinesVisible="false" horizontalZeroLineVisible="false" layoutX="77.0" layoutY="183.0" legendSide="TOP" legendVisible="false" prefHeight="160.0" prefWidth="200.0" verticalGridLinesVisible="false" verticalZeroLineVisible="false">
               <xAxis>
                 <CategoryAxis side="BOTTOM" />
@@ -77,13 +77,13 @@
          <children>
             <RadioButton fx:id="oscillatorSwitch2" layoutX="110.0" layoutY="26.0" mnemonicParsing="false" text="Oscillator 2" />
             <ComboBox fx:id="WaveTableSelector2" layoutX="76.0" layoutY="56.0" prefWidth="150.0" />
-            <Slider fx:id="volumeControl2" layoutX="-28.0" layoutY="239.0" rotate="-90.0" />
+            <Slider fx:id="volumeControl2" layoutX="-28.0" layoutY="239.0" max="5.0" min="-60.0" rotate="-90.0" />
             <Label layoutX="22.0" layoutY="329.0" text="Volume" />
             <ComboBox fx:id="nVoiceSelector2" layoutX="45.0" layoutY="122.0" prefHeight="25.0" prefWidth="65.0" />
-            <Slider fx:id="panControl2" layoutX="81.0" layoutY="387.0" max="50.0" min="-50.0" />
+            <Slider fx:id="panControl2" layoutX="81.0" layoutY="387.0" max="45.0" min="-45.0" />
             <Label layoutX="33.0" layoutY="385.0" prefWidth="20.0" text="Pan" />
-            <Slider fx:id="spreadControl2" layoutX="151.0" layoutY="128.0" max="5.0" prefHeight="14.0" prefWidth="53.0" />
-            <Slider fx:id="blendControl2" layoutX="207.0" layoutY="115.0" max="10.0" min="-10.0" prefHeight="14.0" prefWidth="53.0" rotate="-90.0" />
+            <Slider fx:id="spreadControl2" layoutX="151.0" layoutY="128.0" max="0.4" prefHeight="14.0" prefWidth="53.0" />
+            <Slider fx:id="blendControl2" layoutX="207.0" layoutY="115.0" max="1.0" min="-1.0" prefHeight="14.0" prefWidth="53.0" rotate="-90.0" />
             <LineChart fx:id="waveTableVisualizer2" alternativeRowFillVisible="false" axisSortingPolicy="NONE" createSymbols="false" horizontalGridLinesVisible="false" horizontalZeroLineVisible="false" layoutX="77.0" layoutY="183.0" legendSide="TOP" legendVisible="false" prefHeight="160.0" prefWidth="200.0" verticalGridLinesVisible="false" verticalZeroLineVisible="false">
                <xAxis>
                   <CategoryAxis side="BOTTOM" />
@@ -107,13 +107,13 @@
          <children>
             <RadioButton fx:id="oscillatorSwitch3" layoutX="107.0" layoutY="29.0" mnemonicParsing="false" text="Oscillator 3" />
             <ComboBox fx:id="WaveTableSelector3" layoutX="75.0" layoutY="60.0" prefWidth="150.0" />
-            <Slider fx:id="volumeControl3" layoutX="-27.0" layoutY="234.0" rotate="-90.0" />
+            <Slider fx:id="volumeControl3" layoutX="-27.0" layoutY="234.0" max="6.0" min="-60.0" rotate="-90.0" />
             <Label layoutX="23.0" layoutY="331.0" text="Volume" />
             <ComboBox fx:id="nVoiceSelector3" layoutX="46.0" layoutY="124.0" prefHeight="25.0" prefWidth="65.0" />
-            <Slider fx:id="panControl3" layoutX="78.0" layoutY="382.0" max="50.0" min="-50.0" />
+            <Slider fx:id="panControl3" layoutX="78.0" layoutY="382.0" max="45.0" min="-45.0" />
             <Label layoutX="34.0" layoutY="381.0" text="Pan" />
-            <Slider fx:id="spreadControl3" layoutX="150.0" layoutY="130.0" max="5.0" prefHeight="14.0" prefWidth="53.0" />
-            <Slider fx:id="blendControl3" layoutX="206.0" layoutY="123.0" max="10.0" min="-10.0" prefHeight="14.0" prefWidth="53.0" rotate="-90.0" />
+            <Slider fx:id="spreadControl3" layoutX="150.0" layoutY="130.0" max="0.4" prefHeight="14.0" prefWidth="53.0" />
+            <Slider fx:id="blendControl3" layoutX="206.0" layoutY="123.0" max="1.0" min="-1.0" prefHeight="14.0" prefWidth="53.0" rotate="-90.0" />
             <LineChart fx:id="waveTableVisualizer3" alternativeRowFillVisible="false" axisSortingPolicy="NONE" createSymbols="false" horizontalGridLinesVisible="false" horizontalZeroLineVisible="false" layoutX="76.0" layoutY="175.0" legendSide="TOP" legendVisible="false" prefHeight="160.0" prefWidth="200.0" verticalGridLinesVisible="false" verticalZeroLineVisible="false">
                <xAxis>
                   <CategoryAxis side="BOTTOM" />
@@ -135,7 +135,7 @@
    <bottom>
       <AnchorPane prefHeight="200.0" prefWidth="900.0" BorderPane.alignment="CENTER">
          <children>
-            <Slider fx:id="masterVolume" layoutX="738.0" layoutY="165.0" />
+            <Slider fx:id="masterVolume" layoutX="738.0" layoutY="165.0" max="5.0" min="-60.0" />
             <Label layoutX="788.0" layoutY="142.0" text="Master" />
             <Slider fx:id="masterAttack" layoutX="737.0" layoutY="111.0" />
             <Label layoutX="787.0" layoutY="88.0" text="Attack" />
