--- a/src/main/resources/com/righit/synthesizer/synth-view.fxml
+++ b/src/main/resources/com/righit/synthesizer/synth-view.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.effect.Blend?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.shape.Line?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.righit.synthesizer.SynthController">
    <top>
@@ -57,6 +58,10 @@
            <Label layoutX="53.0" layoutY="94.0" text="N.Voices" />
            <Label layoutX="158.0" layoutY="94.0" text="Spread" />
            <Label layoutX="247.0" layoutY="112.0" text="Blend" />
+         <Line endX="-7.0" endY="-6.0" layoutX="158.0" layoutY="411.0" startX="-7.0" startY="6.0" />
+         <Line endX="-7.0" endY="-6.0" layoutX="165.0" layoutY="146.0" startX="-7.0" startY="6.0" />
+         <Line endX="-7.0" endY="-6.0" layoutX="233.0" layoutY="126.0" startX="-18.0" startY="-6.0" />
+         <Line endX="1.5" endY="-6.0" layoutX="44.0" layoutY="199.0" startX="-11.0" startY="-6.0" />
        </AnchorPane>
    </left>
    <center>
@@ -85,6 +90,10 @@
            <Label layoutX="53.0" layoutY="95.0" text="N.Voices" />
            <Label layoutX="158.0" layoutY="95.0" text="Spread" />
            <Label layoutX="249.0" layoutY="112.0" text="Blend" />
+         <Line endX="-7.0" endY="-6.0" layoutX="157.0" layoutY="411.0" startX="-7.0" startY="6.0" />
+         <Line endX="7.0" endY="-6.0" layoutX="28.0" layoutY="199.0" startX="-5.0" startY="-6.0" />
+         <Line endX="-7.0" endY="-6.0" layoutX="164.0" layoutY="148.0" startX="-7.0" startY="6.0" />
+         <Line endX="-7.0" endY="-6.0" layoutX="233.0" layoutY="128.0" startX="-18.0" startY="-6.0" />
        </AnchorPane>
    </center>
    <right>
@@ -113,6 +122,9 @@
            <Label layoutX="55.0" layoutY="98.0" text="N.Voices" />
            <Label layoutX="157.0" layoutY="98.0" text="Spread" />
            <Label layoutX="249.0" layoutY="120.0" text="Blend" />
+         <Line endX="-7.0" endY="-6.0" layoutX="154.0" layoutY="411.0" startX="-7.0" startY="6.0" />
+         <Line endX="-7.0" endY="-6.0" layoutX="231.0" layoutY="135.0" startX="-18.0" startY="-6.0" />
+         <Line endX="-7.0" endY="-6.0" layoutX="165.0" layoutY="149.0" startX="-7.0" startY="6.0" />
        </AnchorPane>
    </right>
    <bottom>
