--- a/src/main/resources/com/righit/synthesizer/synth-view.fxml
+++ b/src/main/resources/com/righit/synthesizer/synth-view.fxml
@@ -5,33 +5,18 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Blend?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.righit.synthesizer.SynthController">
-   <top>
-       <MenuBar BorderPane.alignment="CENTER">
-           <Menu mnemonicParsing="false" text="File">
-               <MenuItem mnemonicParsing="false" text="Close" />
-           </Menu>
-           <Menu mnemonicParsing="false" text="Effects">
-               <MenuItem mnemonicParsing="false" text="Delete" />
-           </Menu>
-           <Menu mnemonicParsing="false" text="Save preset">
-               <MenuItem mnemonicParsing="false" text="About" />
-           </Menu>
-           <Menu mnemonicParsing="false" text="Load preset">
-               <MenuItem mnemonicParsing="false" text="About" />
-           </Menu>
-       </MenuBar>
-   </top>
    <left>
        <AnchorPane maxWidth="-Infinity" prefHeight="425.0" prefWidth="300.0">
            <ComboBox fx:id="WaveTableSelector1" layoutX="76.0" layoutY="53.0" prefWidth="150.0" />
@@ -128,19 +113,38 @@
        </AnchorPane>
    </right>
    <bottom>
-       <AnchorPane prefHeight="200.0" prefWidth="900.0" BorderPane.alignment="CENTER">
-           <Slider fx:id="masterVolume" layoutX="738.0" layoutY="165.0" max="5.0" min="-60.0" />
-           <Label layoutX="788.0" layoutY="142.0" text="Master" />
-           <Slider fx:id="masterAttack" layoutX="737.0" layoutY="111.0" />
-           <Label layoutX="787.0" layoutY="88.0" text="Attack" />
-           <ComboBox fx:id="audioInterfaceSelector" layoutX="678.0" layoutY="14.0" prefWidth="150.0" />
-           <ComboBox fx:id="midiInterfaceSelector" layoutX="678.0" layoutY="46.0" prefWidth="150.0" />
-           <Button layoutX="845.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#changeMixer" text="Ok" />
-           <Button fx:id="midiokButton" layoutX="845.0" layoutY="46.0" mnemonicParsing="false" onMouseClicked="#changeMidi" text="Ok" />
-           <Label layoutX="589.0" layoutY="18.0" text="Audio Output" />
-           <Label fx:id="midiTextLabel" layoutX="592.0" layoutY="50.0" prefHeight="17.0" prefWidth="67.0" text="Midi Input" />
-           <Button fx:id="activatePresetButton" layoutX="589.0" layoutY="99.0" mnemonicParsing="false" onMouseClicked="#update" prefHeight="37.0" prefWidth="127.0" text="Activate Preset" />
-           <Button fx:id="initPresetButton" layoutX="589.0" layoutY="141.0" mnemonicParsing="false" onMouseClicked="#initPreset" prefHeight="37.0" prefWidth="127.0" text="Init Preset" />
+       <AnchorPane prefHeight="223.0" prefWidth="900.0" BorderPane.alignment="CENTER">
+           <Slider fx:id="masterVolume" layoutX="746.0" layoutY="180.0" max="5.0" min="-60.0" />
+           <Label layoutX="796.0" layoutY="157.0" text="Master" />
+           <Slider fx:id="masterAttack" layoutX="745.0" layoutY="126.0" />
+           <Label layoutX="795.0" layoutY="103.0" text="Attack" />
+           <ComboBox fx:id="audioInterfaceSelector" layoutX="686.0" layoutY="29.0" prefWidth="150.0" />
+           <ComboBox fx:id="midiInterfaceSelector" layoutX="686.0" layoutY="61.0" prefWidth="150.0" />
+           <Button layoutX="853.0" layoutY="29.0" mnemonicParsing="false" onMouseClicked="#changeMixer" text="Ok" />
+           <Button fx:id="midiokButton" layoutX="853.0" layoutY="61.0" mnemonicParsing="false" onMouseClicked="#changeMidi" text="Ok" />
+           <Label layoutX="597.0" layoutY="33.0" text="Audio Output" />
+           <Label fx:id="midiTextLabel" layoutX="600.0" layoutY="65.0" prefHeight="17.0" prefWidth="67.0" text="Midi Input" />
+           <Button fx:id="activatePresetButton" layoutX="597.0" layoutY="114.0" mnemonicParsing="false" onMouseClicked="#update" prefHeight="37.0" prefWidth="127.0" text="Activate Preset" />
+           <Button fx:id="initPresetButton" layoutX="597.0" layoutY="156.0" mnemonicParsing="false" onMouseClicked="#initPreset" prefHeight="37.0" prefWidth="127.0" text="Init Preset" />
+         <Button fx:id="plusButton" layoutX="494.0" layoutY="41.0" mnemonicParsing="false" onMouseClicked="#addPreset" prefHeight="65.0" prefWidth="67.0" text="+">
+            <font>
+               <Font size="30.0" />
+            </font>
+         </Button>
+         <Button fx:id="minusButton" layoutX="494.0" layoutY="125.0" mnemonicParsing="false" onMousePressed="#removePreset" prefHeight="65.0" prefWidth="67.0" text="-">
+            <font>
+               <Font name="System Bold Italic" size="30.0" />
+            </font>
+         </Button>
+         <TextField fx:id="presetName" layoutX="33.0" layoutY="21.0" prefHeight="25.0" prefWidth="433.0" />
+         <TableView fx:id="presetTable" layoutX="33.0" layoutY="51.0" prefHeight="160.0" prefWidth="433.0">
+           <columns>
+             <TableColumn fx:id="presetColumn" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="75.0" text="PRESETS" />
+           </columns>
+            <columnResizePolicy>
+               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+            </columnResizePolicy>
+         </TableView>
        </AnchorPane>
    </bottom>
 </BorderPane>
